--- a/config.properties
+++ b/config.properties
@@ -1,5 +1,5 @@
-#Fri Sep 20 06:39:33 ART 2024
-debugMode=true
-screenHeight=768
-screenWidth=1366
+#Fri Sep 20 13:13:16 ART 2024
+debugMode=false
+screenHeight=1080
+screenWidth=1920
 volume=80
