--- a/config.properties
+++ b/config.properties
@@ -1,5 +1,7 @@
-#Fri Sep 20 13:13:16 ART 2024
+#Sat Sep 21 00:28:17 ART 2024
 debugMode=false
-screenHeight=1080
-screenWidth=1920
+maxFPS=60
+screenHeight=720
+screenWidth=1280
+showFPS=false
 volume=80
