removed max fps setting

--- a/config.properties
+++ b/config.properties
@@ -1,7 +1,6 @@
-#Sat Sep 21 00:28:17 ART 2024
+#Sat Sep 21 00:58:34 ART 2024
 debugMode=false
-maxFPS=60
 screenHeight=720
 screenWidth=1280
-showFPS=false
+showFPS=true
 volume=80
